# KerbalToolkit

./: .build.yml  .gitattributes  .gitignore  .gitmodules  0001-Editor-API-for-Part-Introspection.patch  0001-KerbTK-Addon.patch  Cargo.toml  LICENSE  README.md  flake.nix
egui-grid/: Cargo.toml
egui-grid/src/: builder.rs  grid.rs
egui_term/: Cargo.toml
egui_term/examples/tabs/src/: main.rs
egui_term/src/: lib.rs
egui_term/src/backend/: mod.rs
lib/: Cargo.toml  build.rs
lib/src/: arena.rs  bodies.rs  ffs.rs  kepler.rs  krpc.rs  lib.rs  maneuver.rs  math.rs  misc.rs  time.rs  translunar.rs  vessel.rs
lib/src/kepler/: lambert.rs  orbits.rs
lib/src/krpc/: encode.rs
lib/src/maneuver/: gpm.rs
pagmo2/: .gitignore  Cargo.toml  build.rs
pagmo2/src/: bindings.cc  bindings.hpp  common.hpp  lib.rs
poster/: KerbalToolkit.bib  kerbtk-testbed.ckan
rust-nlopt/: .gitattributes  build.rs
rust-nlopt/nlopt-2.7.1/src/algs/mma/: mma.c
rust-nlopt/nlopt-2.7.1/src/algs/slsqp/: slsqp.c
rust-nlopt/src/: lib.rs
scripting/: Manifest.toml  Project.toml
scripting/src/: Bodies.jl  Enums.jl  KerbTk.jl  Missions.jl  Orbits.jl  SolarSystems.jl  StateVectors.jl  Support.jl
src/: arena.rs  backend.rs  bodies.rs  ffi.rs  ffs.rs  ffs2.rs  fuel_flow_simulation.rs  krpc.rs  lib.rs  main.rs  maneuver.rs  math.rs  misc.rs  mission.rs  mpt.rs  scripting.rs  time.rs  translunar.rs  utils.rs  vectors.rs  vessel.rs  vessels.rs  widgets.rs
src/ffi/: bodies.rs  missions.rs  orbits.rs  support.rs  sv.rs  systems.rs
src/kepler/: lambert.rs  orbits.rs
src/krpc/: encode.rs  krpc.proto
src/locales/en-US/: main.ftl
