[package]
name = "kerbtk-bin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.6.3"
itertools = "0.12.1"
libm = "0.2.8"
nalgebra = { version = "0.33.0", default-features = false, features = ["serde", "serde-serialize", "std"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
time = { version = "0.3.34", features = ["default", "formatting", "serde", "parsing"] }
tracing = "0.1.40"

eframe = "0.29.1"
egui = "0.29.1"
egui_extras = "0.29.1"
egui_grid = { path = "egui-grid" }
egui_term = { path = "egui_term" }
egui-notify = "0.17.0"
toml = "0.8.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
egui-modal = "0.5"
fluent = "0.16.1"
fluent-templates = "0.9.4"
unic-langid = "0.9.5"
ron = "0.8.1"
rfd = "=0.12.1"
parking_lot = { version = "0.12.2", features = ["serde"] }
num_enum = "0.7.2"
nom = "7.1.3"
egui_plot = "0.27.2"
egui_form = { version = "0.1.1", features = ["validator_garde"] }
garde = "0.18.0"
argmin-observer-slog = "0.1.0"
kerbtk = { path = "./lib" }
tokio = { version = "1.38.0", features = ["full"] }
jlrs = { version = "0.21.0", features = ["local-rt", "julia-1-11"] }
polling = "3.7.3"
mio = { version = "1.0.2", features = ["os-ext"] }

[workspace]
members = [".", "egui-grid", "lib", "egui_term"]

[profile.release]
debug = "full"
